# audicop

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
audicop/: __init__.py  app.py  audio.py  config.py  formatting.py  llm.py  prompts.py  recommender.py  transcriber.py  ui.py
audicop/prompts/: context.md  system.md
audicop/prompts/actions/: key_points.md  minutes.md  summary.md
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  audio.py  capture.py  cuda_dll.py  hardware.py  llm.py  local_llm.py  meeting.py  transcriber.py
backend/app/api/: __init__.py  chat.py  hardware.py  meetings.py  record.py  transcribe.py
backend/app/core/: __init__.py  config.py
backend/app/prompts/: __init__.py  context.md  system.md
backend/app/prompts/actions/: key_points.md  minutes.md  retro.md  sales_call.md  standup.md  summary.md  tasks.md
backend/app/services/: __init__.py  citations.py  formatting.py  live.py  meeting_store.py  pipeline.py  recommender.py  retrieve.py  summarize.py  transcript_store.py
frontend/: app.js  index.html  styles.css
scripts/: run.bat  run.sh  start.cmd  start.ps1  start.sh
tests/: test_api.py  test_audio.py  test_capture.py  test_citations.py  test_formatting.py  test_hardware.py  test_live.py  test_llm.py  test_local_llm.py  test_meeting.py  test_meeting_store.py  test_pipeline.py  test_prompts.py  test_quality_pack.py  test_recommend_llm.py  test_recommender.py  test_record_api.py  test_retrieve.py  test_summarize.py  test_transcriber.py
