[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audicop"
version = "0.3.0"
description = "Local audio/video transcription with FastAPI and faster-whisper. Zero config."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "JoseAAA" }]
keywords = ["whisper", "transcription", "fastapi", "faster-whisper", "audio", "video"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.0",
    "imageio-ffmpeg>=0.5",
    "psutil>=5.9",
    # AI chat/analysis (bring-your-own-key). Kept in the base set on purpose:
    # `uv sync` prunes anything not installed, so an optional extra would be
    # uninstalled on every normal launch and the AI panel would silently
    # break. These SDKs are lightweight (no torch), so always installing them
    # is the reliable choice for non-technical users.
    "openai>=1.0",
    "google-genai>=0.3",
]

[project.optional-dependencies]
# Install via `uv sync --extra cuda` (the launcher does this automatically
# when an NVIDIA driver is detected). These wheels ship the cuBLAS and
# cuDNN runtime libraries that ctranslate2 needs to use the GPU; you do
# NOT need a system-wide CUDA toolkit install.
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/JoseAAA/audicop"
Issues = "https://github.com/JoseAAA/audicop/issues"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.setuptools.package-data]
# Ship the editable prompt templates with the package.
app = ["prompts/*.md", "prompts/actions/*.md"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "D",   # pydocstyle
]
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
# FastAPI's dependency-injection defaults (File()/Form()/Depends()) are the
# documented pattern; B008 (call-in-default) is a false positive there.
"backend/app/api/*" = ["D", "B008"]
"backend/app/main.py" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "app.core.config",
    "app.adapters.hardware",
    "app.adapters.audio",
    "app.adapters.transcriber",
    "app.adapters.llm",
    "app.services.recommender",
    "app.services.formatting",
    "app.services.pipeline",
    "app.prompts",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "imageio_ffmpeg.*",
    "psutil.*",
    "torch.*",
    "openai.*",
    "google.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["backend"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["backend/app/main.py", "backend/app/api/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
